--- a/AppFilesAlenka/UIMirror/app/src/main/AndroidManifest.xml
+++ b/AppFilesAlenka/UIMirror/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:exported="true"
             android:theme="@style/Theme.UIMirror">
             <intent-filter>
@@ -31,6 +31,8 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".GreetingActivity" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".AlarmEditorActivity" />
         <receiver android:name=".AlarmReceiver" />
     </application>
