--- a/AppFilesAlenka/UIMirror/app/src/main/AndroidManifest.xml
+++ b/AppFilesAlenka/UIMirror/app/src/main/AndroidManifest.xml
@@ -8,6 +8,8 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="false" />
+    <!-- Declares alarm feature, not required -->
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 
     <application
         android:allowBackup="true"
