--- a/AppFilesAlenka/UIMirror/app/src/main/AndroidManifest.xml
+++ b/AppFilesAlenka/UIMirror/app/src/main/AndroidManifest.xml
@@ -40,6 +40,14 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".AlarmEditorActivity" />
 
+        <activity
+            android:name=".SettingsActivity"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
+
         <receiver android:name=".AlarmReceiver" />
     </application>
 
