--- a/AppFilesMaria/UIMirror/local.properties
+++ b/AppFilesMaria/UIMirror/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Nov 04 16:41:31 CET 2024
-sdk.dir=C\:\\Users\\nicog\\AppData\\Local\\Android\\Sdk
+#Wed Nov 06 13:06:54 CET 2024
+sdk.dir=C\:\\Users\\aleis\\AppData\\Local\\Android\\Sdk
