Added events listing with calender functionality

--- a/AppFilesAlenka/UIMirror/app/src/main/AndroidManifest.xml
+++ b/AppFilesAlenka/UIMirror/app/src/main/AndroidManifest.xml
@@ -48,6 +48,14 @@
                 android:value=".MainActivity" />
         </activity>
 
+        <activity
+            android:name=".events.EventsListingActivity"
+            android:parentActivityName=".MainActivity"/>
+
+        <activity
+            android:name=".events.AddEventActivity"
+            android:parentActivityName=".MainActivity"/>
+
         <receiver android:name=".AlarmReceiver" />
     </application>
 
