--- a/AppFilesAlenka/UIMirror/app/src/main/AndroidManifest.xml
+++ b/AppFilesAlenka/UIMirror/app/src/main/AndroidManifest.xml
@@ -22,7 +22,9 @@
         android:roundIcon="@drawable/logo_white"
         android:supportsRtl="true"
         android:theme="@style/Theme.UIMirror"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:name=".MyApp" >
+
 <!--android:roundIcon="@mipmap/ic_launcher_round"-->
 
         <activity
