--- a/AppFilesAlenka/UIMirror/app/src/main/AndroidManifest.xml
+++ b/AppFilesAlenka/UIMirror/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UIMirror"
         tools:targetApi="31"
-        android:name=".MyApp" >
+        android:name=".musik.MyApp" >
 
 <!--android:roundIcon="@mipmap/ic_launcher_round"-->
 
@@ -37,10 +37,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SongSelectionActivity"/>
+        <activity android:name=".musik.SongSelectionActivity"/>
         <activity android:name=".GreetingActivity" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".AlarmEditorActivity" />
+        <activity android:name=".alarm.AlarmEditorActivity" />
 
         <activity
             android:name=".SettingsActivity"
@@ -66,7 +66,7 @@
                 android:value=".SettingsActivity" />
         </activity>
 
-        <receiver android:name=".AlarmReceiver" />
+        <receiver android:name=".alarm.AlarmReceiver" />
     </application>
 
 </manifest>
